#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([btree], [1.0], [baifanmvp@163.com])
AC_CONFIG_SRCDIR([src/main.c])

AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
LT_INIT
# Checks for libraries.
AC_CONFIG_MACRO_DIR([m4])
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                src/Makefile
               ])
AC_OUTPUT
